--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,26 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>SpringMVC Menu</h1>
+        <h2>HelloController</h2>
+        <ol>
+            <!-- 蒐集網址連結 -->
+            <li>
+                <a href="mvc/hello/now">mvc/hello/now</a>
+            </li>
+            <li>
+                <a href="mvc/hello/greet">mvc/hello/greet</a>
+            </li>
+            <li>
+                <!-- 路徑參數配置 -->
+                <a href="mvc/hello/add/10/20">mvc/hello/add/10/20</a><br>
+                <a href="mvc/hello/add/30/40">mvc/hello/add/30/40</a><br>
+            </li>
+            <li>
+                <!-- 路徑參數配置 -->
+                <a href="mvc/hello/add2/10.2/20.5">mvc/hello/add2/10.2/20.5</a><br>
+                <a href="mvc/hello/add2/30/40">mvc/hello/add2/30/40</a><br>
+            </li>
+        </ol>
     </body>
 </html>
