--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css">
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css">
     </head>
     <body style="padding: 20px">
         <h1>SpringMVC Menu</h1>
@@ -11,12 +11,12 @@
             <thead>
                 <tr>
                     <th><h2>HelloController</h2></th>
-                    <th><h2>PageController</h2></th>                    
+                    <th><h2>PageController</h2></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>
+                    <td valign="top">
                         <ol>
                             <!-- 蒐集網址連結 -->
                             <!-- p : 空一行 -->
@@ -90,9 +90,17 @@
                             </li><p />
                         </ol>
                     </td>
-                    <td>
+                    <td valign="top">
                         <ol>
-
+                            <li>
+                                <a href="mvc/page/bmi?h=170&w=60">mvc/page/bmi?h=170&w=60</a>
+                            </li>
+                            <li>
+                                <a href="mvc/page/bmi2?h=170&w=60">mvc/page/bmi2?h=170&w=60</a>
+                            </li>
+                            <li>
+                                <a href="mvc/page/bmi/list?h=170,160,180&w=60,50,70">mvc/page/bmi/list?h=170,160,180&w=60,50,70</a>
+                            </li>
                         </ol>
                     </td>
                 </tr>
