--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
                 <tr>
                     <th><h2>HelloController</h2></th>
                     <th><h2>PageController</h2></th>
+                    <th><h2>CompanyController</h2></th>
                 </tr>
             </thead>
             <tbody>
@@ -101,6 +102,14 @@
                             <li>
                                 <a href="mvc/page/bmi/list?h=170,160,180&w=60,50,70">mvc/page/bmi/list?h=170,160,180&w=60,50,70</a>
                             </li>
+                        </ol>
+                    </td>
+                    <td valign="top">
+                        <ol>
+                            <li>
+                                <a href="mvc/company/">mvc/company/</a>
+                            </li>
+                            
                         </ol>
                     </td>
                 </tr>
